[package]
name = "sol_status_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4.1"
toml = "0.5"
reqwest = { version="0.11.9", features = ["default-tls"]}
tokio = {version ="1.17.0", features = ["full"]}
json = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
html_parser = "*"
solanabeach = {path = "./src/solana_helper/solanabeach"}