[package]
name = "sol_status_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4.1"
tokio = { version = "1.0.0", features = ["full"] }
chrono = { version = "0.4", features = ["clock"] }
serenity = { version = "0.11.1", features = ["client", "gateway", "rustls_backend", "model", "cache", "cache", "framework", "standard_framework", "rustls_backend"] }
solscan-api = "0.1.2"